--- a/.github/workflows/trivy-scan.yml.yml
+++ b/.github/workflows/trivy-scan.yml.yml
@@ -9,6 +9,9 @@ on:
   pull_request:
     branches:
       - main # Also scans on pull requests targeting the main branch
+  
+  # Add this line to enable manual triggers
+  workflow_dispatch:
 
 jobs:
   trivy_scan:
