--- a/.github/workflows/trivy-scan.yml.yml
+++ b/.github/workflows/trivy-scan.yml.yml
@@ -13,6 +13,11 @@ on:
   # Add this line to enable manual triggers
   workflow_dispatch:
 
+# Add permissions for writing PR comments
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   trivy_scan:
     name: Trivy Filesystem Scan
